syntax = "proto3";

package game;

option go_package = ".;game";

message Game {
  uint32 Id = 1;
}

message CreateResult {
  string Id = 1;
}

message Weather {
  string WeatherName = 1;
  int64 RainChance = 2;
}

message Balance {
  int64 Balance = 1;
}

message Nothing {
  bool Dummy = 1;
}

message GameID {
  string Id = 1;
}

message CalculateRequest {
  GameID Game = 1;
  int64 CupsAmount = 2;
  int64 IceAmount = 3;
  int64 StandAmount = 4;
  int64 Price = 5;
}

message CalculateResponse {
  int64 Balance = 1;
  int64 Day = 2;
  int64 Profit = 3;
}

service LemonadeGame {
  rpc Create(Nothing) returns (CreateResult);
  rpc RandomWeather(GameID) returns (Weather);
  rpc GetBalance(GameID) returns (Balance);
  rpc Calculate(CalculateRequest) returns (CalculateResponse);
}

service BotanicalGardenGame {
  rpc Create(Nothing) returns (CreateResult);
  rpc RandomWeather(GameID) returns (Weather);
  rpc GetBalance(GameID) returns (Balance);
  rpc Calculate(CalculateRequest) returns (CalculateResponse);
}